--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="tab-content">
         <div class="container">
             <!-- Tab Content 1 -->
-            <!-- <div id="tab-1-content" class="tab-content-item show">
+            <div id="tab-1-content" class="tab-content-item show">
                 <div class="tab-1-content-inner">
                     <div>
                         <p class="text-lg">
@@ -54,10 +54,10 @@
                     </div>
                     <img src="images/tab-content-1.png" alt="">
                 </div>
-            </div> -->
+            </div>
 
             <!-- Tab 2 Content -->
-            <!-- <div id="tab-2-content" class="tab-content-item">
+            <div id="tab-2-content" class="tab-content-item">
                 <div class="tab-2-content-top">
                     <p class="text-lg">
                         Watch TV shows and movies anytime, anywhere - personalized for you.
@@ -81,7 +81,7 @@
                         <p class="text-dark">Watch right on Netflix.com</p>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Tab 3 Content -->
             <div id="tab-3-content" class="tab-content-item">
@@ -184,5 +184,6 @@
             </ul>
         </div>
     </footer>
+    <script src="./javascript/main.js"></script>
 </body>
 </html>
